--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 
     <div class="login-box">
         <div class="logo-login">
-            <img src="./Images/logo-fox.jpg" alt="foto slogan">
+            <img src="./Images/logo-fox2.png" alt="foto slogan">
         </div>
         <h2 >Espião - System Fox</h2>
         <form action="submit">
