--- a/acesso-ao-monitoramento.html
+++ b/acesso-ao-monitoramento.html
@@ -149,7 +149,7 @@
             </div>
 
             <div class="menuResponsivo">
-                <img style="width: 150px;" src="./Images/logo-fox.jpg" alt="Logo System Fox">
+                <img style="width: 150px;" src="./Images/logo-fox2.png" alt="Logo System Fox">
                 <ul>
 
                     <li onclick="openMobile('WhatsApp')">WhatsApp</li>
