--- a/login.html
+++ b/login.html
@@ -29,9 +29,9 @@
 
     <div class="login-box">
         <div class="logo-login">
-            <img src="./Images/logo-fox2.png" alt="foto slogan">
+            <img src="./Images/secretus.png" alt="foto slogan">
         </div>
-        <h2 >Espião - System Fox</h2>
+        <h2 >Grupo Secretus</h2>
         <form action="submit">
             <div class="user-box">
                 <input id="usuario" onkeyup="userempty.innerHTML = ''" type="text" name="name" class="user" required="Insira Seu Usuario" autocomplete="off">
