--- a/acesso-ao-monitoramento.html
+++ b/acesso-ao-monitoramento.html
@@ -149,7 +149,7 @@
             </div>
 
             <div class="menuResponsivo">
-                <img style="width: 150px;" src="./Images/logo-fox2.png" alt="Logo System Fox">
+                <img style="width: 150px;" src="./Images/secretus.png" alt="Logo secretus">
                 <ul>
 
                     <li onclick="openMobile('WhatsApp')">WhatsApp</li>
@@ -170,7 +170,7 @@
 
         <div class="painel" style="width: 100%">
             <div class="painelHeader">
-                <h3>System Fox</h3>
+                <h3>Secretus</h3>
 
             </div>
             <div>
@@ -240,7 +240,7 @@
 
     <footer class="footer">
 
-        <h1>System Fox</h1>
+        <h1>Grupo Secretus</h1>
         <h2>Todos os Direitos Reservados</h2>
         <p>By Modo Anonimo</p>
 
